<resources>


    <string name="save_song">Save Song</string>
    <string name="duration">Duration</string>
    <string name="album_name">Album Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="song_title">Song Title</string>
    <string name="enter_search_query">Enter search query</string>
    <string name="search">Search</string>
    <string name="search_artists">Search Artists</string>
    <string name="help">To navigate the Music Library App, start by exploring the song collection and tapping on any song to view its details, including title, artist, and duration. You can save your favorites by pressing the \"Save\" button while viewing a song\'s details. To revisit these selections, simply go to the \"Favorite Songs\" section from the main menu. If you need further guidance, access this help guide from the main menu. Enjoy curating your personal music collection with ease!</string>
    <string name="song_selected">"Song selected: "</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="search_history">Search History</string>
    <string name="favorite_songs">Favorite Songs</string>

    <string name="app_name">CST2335 Final Project</string>

    <string name="location_info">Location Information</string>

    <string name="latitude_input_text">Enter latitude:</string>
    <string name="latitude_input_hint">Enter latitude</string>

    <string name="longitude_input_text">Enter longitude:</string>
    <string name="longitude_input_hint">Enter longitude</string>

    <string name="lookup_text">Lookup</string>
    <string name="view_favorite_locations_text">View Favorite Locations</string>

    <string name="save_location_text">Save Location</string>
    <string name="back_text">Back</string>

    <string name="time_zone_sentence">Time zone:</string>
    <string name="time_zone_hint">Time zone goes here</string>

    <string name="sunrise_sentence">Sunrise Time:</string>
    <string name="sunrise_hint">Sunrise time goes here</string>

    <string name="sunset_sentence">Sunset Time:</string>
    <string name="sunset_hint">Sunset time goes here</string>

    <string name="favourite_locations_list">Favourite Locations List</string>

    <string name="date_time_sentence">Current Date and Time:</string>
    <string name="date_hint">Date and time go here</string>

    <string name="latitude_longitude_isEmpty">Please enter latitude and longitude</string>
    <string name="save_location_sentence">The location has been saved successfully</string>

    <string name="alert_title">Delete/Update Location</string>
    <string name="alert_sentence">Please choose one of the options below</string>
    <string name="delete_option">Delete</string>
    <string name="update_option">Update</string>

    <string name="error_message">Error fetching data</string>

    <string name="delete_sentence">The location has been successfully deleted</string>
    <string name="update_sentence">The location has been updated successfully</string>

    <string name="undo">UNDO</string>


    <string name="about">ABOUT</string>
    <string name="about_message">Type in the Longitude and Latitude of anywhere you would like to know the sunset and sunrise times of.</string>

    <string name="clear">Clear</string>
    <string name="clear_message">Inputs cleared</string>

    <string name="app_name1">Sunrise and Sunset Lookup</string>

    <string name="app_name2">Dictionary</string>

    <string name="app_name3">Recipe Search</string>

    <string name="app_name4">Deezer Song Search API</string>




    <string name="main_title">What word are you looking for?</string>
    <string name="saved_word">Saved Words</string>
    <string name="help_title">Help</string>
    <string name="help_info">Welcome to the Dictionary Application. To use the app, start by typing your unknown word into the search bar and hit Enter or click the search icon.</string>
    <string name="dictionary_app">Dictionary APP</string>
    <string name="period">period</string>
    <string name="part_of_speech">Part of speech</string>
    <string name="a_book_or_electronic_resource_that_lists_the_words_of_a_language_and_gives_their_meaning_or_gives_the_equivalent_words_in_a_different_language_often_also_providing_information_about_pronunciation_origin_and_usage">a book or electronic resource that lists the words of a language and gives their meaning, or gives the equivalent words in a different language, often also providing information about pronunciation, origin, and usage.</string>
    <string name="words">Words</string>
    <string name="save_word">saved word</string>
    <string name="welcome_to_the_dictionary_app">Welcome to the Dictionary App</string>
    <string name="search">Search</string>
    <string name="word">Word</string>
    <string name="help">Help</string>
    <string name="dictionary_about">About</string>
    <string name="saved_definitions">Saved Definitions</string>


</resources>