<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search menu item -->
    <item
        android:id="@+id/action_back"
        android:title="@string/back_text"
        android:icon="@drawable/back"
        app:showAsAction="always" />
  
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <!-- Help menu item -->
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never" />

    <!-- Favorite Songs menu item -->
    <item
        android:id="@+id/action_favorite_songs"
        android:title="@string/favorite_songs"
        app:showAsAction="never" />

    <!-- Other menu items can be added here -->

    <item
        android:id="@+id/activity_search_history"
        android:title="@string/search_history"
        app:showAsAction="never" />

</menu>

