<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:id="@+id/definitionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="#" />

        <TextView
            android:id="@+id/definitionPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/period" />

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/definitionPartOfSpeech"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/part_of_speech"
            android:textStyle="italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/definitionParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp"
        android:layout_weight="0"
        android:lineSpacingExtra="4sp"
        android:text="@string/a_book_or_electronic_resource_that_lists_the_words_of_a_language_and_gives_their_meaning_or_gives_the_equivalent_words_in_a_different_language_often_also_providing_information_about_pronunciation_origin_and_usage" />

</LinearLayout>